--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "react-boilerplate",
+	"name": "react-basic-boilerplate",
 	"version": "1.0.0",
 	"description": "A basic template to setup a React based project, using Webpack",
-	"main": "index.js",
+	"main": "src/index.js",
 	"scripts": {
 		"dev": "webpack-dev-server --env.env=dev",
 		"dev:bundleanalyzer": "npm run dev -- --env.addons=bundleanalyzer",
@@ -12,51 +12,38 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/rmemory/react-boilerplate.git"
+		"url": "git+https://github.com/rmemory/react-basic-boilerplate.git"
 	},
 	"keywords": [],
-	"author": "Richard Memory",
+	"author": "",
 	"license": "ISC",
 	"bugs": {
-		"url": "https://github.com/rmemory/react-boilerplate/issues"
+		"url": "https://github.com/rmemory/react-basic-boilerplate/issues"
 	},
-	"homepage": "https://github.com/rmemory/react-boilerplate#readme",
+	"homepage": "https://github.com/rmemory/react-basic-boilerplate#readme",
 	"dependencies": {
-		"axios": "^0.18.0",
-		"firebase": "^5.0.4",
-		"prop-types": "^15.6.1",
-		"re-base": "^3.2.3",
-		"react": "^16.4.0",
-		"react-bootstrap": "^0.32.1",
-		"react-delay-render": "^0.1.2",
-		"react-dom": "^16.4.0",
-		"react-hot-loader": "^4.3.2",
-		"react-imported-component": "^4.5.0",
-		"react-overdrive": "0.0.10",
-		"react-prop-types": "^0.4.0",
-		"react-router-dom": "^4.3.1",
-		"react-transition-group": "^2.3.1",
-		"semantic-ui-react": "^0.81.1",
-		"styled-components": "^3.3.2"
+		"prop-types": "^15.6.2",
+		"react": "^16.4.1",
+		"react-dom": "^16.4.1",
+		"react-hot-loader": "^4.3.3"
 	},
 	"devDependencies": {
-		"autoprefixer": "^8.6.3",
+		"autoprefixer": "^8.6.4",
 		"babel-core": "^6.26.3",
-		"babel-eslint": "^8.2.3",
+		"babel-eslint": "^8.2.5",
 		"babel-loader": "^7.1.4",
 		"babel-polyfill": "^6.26.0",
 		"babel-preset-env": "^1.7.0",
 		"babel-preset-react": "^6.24.1",
 		"babel-preset-stage-1": "^6.24.1",
 		"chalk": "^2.4.1",
-		"concurrently": "^3.5.1",
 		"cross-env": "^5.2.0",
 		"css-loader": "^0.28.11",
-		"eslint": "^4.19.1",
-		"eslint-config-airbnb": "^16.1.0",
-		"eslint-plugin-import": "^2.12.0",
-		"eslint-plugin-jsx-a11y": "^6.0.3",
-		"eslint-plugin-react": "^7.9.1",
+		"eslint": "^5.0.1",
+		"eslint-config-airbnb": "^17.0.0",
+		"eslint-plugin-import": "^2.13.0",
+		"eslint-plugin-jsx-a11y": "^6.1.0",
+		"eslint-plugin-react": "^7.10.0",
 		"extract-text-webpack-plugin": "^4.0.0-beta.0",
 		"file-loader": "^1.1.11",
 		"html-webpack-plugin": "^3.2.0",
@@ -64,9 +51,9 @@
 		"rimraf": "^2.6.2",
 		"style-loader": "^0.21.0",
 		"url-loader": "^1.0.1",
-		"webpack": "^4.12.0",
+		"webpack": "^4.14.0",
 		"webpack-bundle-analyzer": "^2.13.1",
-		"webpack-cli": "^3.0.4",
+		"webpack-cli": "^3.0.8",
 		"webpack-dev-server": "^3.1.4",
 		"webpack-merge": "^4.1.3"
 	}
