Add name to package.json

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"url": "git+https://github.com/rmemory/react-basic-boilerplate.git"
 	},
 	"keywords": [],
-	"author": "",
+	"author": "Richard Memory",
 	"license": "ISC",
 	"bugs": {
 		"url": "https://github.com/rmemory/react-basic-boilerplate/issues"
