--- a/package.json
+++ b/package.json
@@ -25,36 +25,36 @@
 		"prop-types": "^15.6.2",
 		"react": "^16.4.1",
 		"react-dom": "^16.4.1",
-		"react-hot-loader": "^4.3.3"
+		"react-hot-loader": "^4.3.4"
 	},
 	"devDependencies": {
-		"autoprefixer": "^8.6.4",
+		"autoprefixer": "^9.0.1",
 		"babel-core": "^6.26.3",
-		"babel-eslint": "^8.2.5",
-		"babel-loader": "^7.1.4",
+		"babel-eslint": "^8.2.6",
+		"babel-loader": "^7.1.5",
 		"babel-polyfill": "^6.26.0",
 		"babel-preset-env": "^1.7.0",
 		"babel-preset-react": "^6.24.1",
 		"babel-preset-stage-1": "^6.24.1",
 		"chalk": "^2.4.1",
 		"cross-env": "^5.2.0",
-		"css-loader": "^0.28.11",
-		"eslint": "^5.0.1",
+		"css-loader": "^1.0.0",
+		"eslint": "^5.2.0",
 		"eslint-config-airbnb": "^17.0.0",
 		"eslint-plugin-import": "^2.13.0",
-		"eslint-plugin-jsx-a11y": "^6.1.0",
+		"eslint-plugin-jsx-a11y": "^6.1.1",
 		"eslint-plugin-react": "^7.10.0",
-		"extract-text-webpack-plugin": "^4.0.0-beta.0",
+		"extract-text-webpack-plugin": "^3.0.2",
 		"file-loader": "^1.1.11",
 		"html-webpack-plugin": "^3.2.0",
-		"postcss-loader": "^2.1.5",
+		"postcss-loader": "^2.1.6",
 		"rimraf": "^2.6.2",
 		"style-loader": "^0.21.0",
 		"url-loader": "^1.0.1",
-		"webpack": "^4.14.0",
+		"webpack": "^4.16.3",
 		"webpack-bundle-analyzer": "^2.13.1",
-		"webpack-cli": "^3.0.8",
-		"webpack-dev-server": "^3.1.4",
+		"webpack-cli": "^3.1.0",
+		"webpack-dev-server": "^3.1.5",
 		"webpack-merge": "^4.1.3"
 	}
 }
