--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 		"eslint-plugin-import": "^2.13.0",
 		"eslint-plugin-jsx-a11y": "^6.1.1",
 		"eslint-plugin-react": "^7.10.0",
-		"extract-text-webpack-plugin": "^3.0.2",
+		"extract-text-webpack-plugin": "^4.0.0-beta.0",
 		"file-loader": "^1.1.11",
 		"html-webpack-plugin": "^3.2.0",
 		"postcss-loader": "^2.1.6",
